--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
         "@inertiajs/inertia": "^0.11.1",
         "@radix-ui/react-dialog": "^1.1.6",
         "@radix-ui/react-slot": "^1.1.2",
+        "@radix-ui/react-toast": "^1.2.11",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "embla-carousel-autoplay": "^8.5.2",
         "embla-carousel-react": "^8.5.2",
         "lucide-react": "^0.477.0",
+        "sweetalert2": "^11.19.1",
         "tailwind-merge": "^3.0.2",
         "tailwindcss-animate": "^1.0.7"
     }
