--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "embla-carousel-autoplay": "^8.5.2",
         "embla-carousel-react": "^8.5.2",
         "lucide-react": "^0.477.0",
+        "react-icons": "^5.5.0",
         "sweetalert2": "^11.19.1",
         "tailwind-merge": "^3.0.2",
         "tailwindcss-animate": "^1.0.7"
