--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
         "clsx": "^2.1.1",
         "embla-carousel-autoplay": "^8.5.2",
         "embla-carousel-react": "^8.5.2",
+        "i18next": "^25.2.0",
         "lucide-react": "^0.477.0",
         "react-hot-toast": "^2.5.2",
+        "react-i18next": "^15.5.2",
         "react-icons": "^5.5.0",
         "sweetalert2": "^11.19.1",
         "tailwind-merge": "^3.0.2",
