--- a/package.json
+++ b/package.json
@@ -34,11 +34,14 @@
         "clsx": "^2.1.1",
         "embla-carousel-autoplay": "^8.5.2",
         "embla-carousel-react": "^8.5.2",
+        "framer-motion": "^12.12.2",
         "i18next": "^25.2.0",
         "lucide-react": "^0.477.0",
+        "react-circle-flags": "^0.0.23",
         "react-hot-toast": "^2.5.2",
         "react-i18next": "^15.5.2",
         "react-icons": "^5.5.0",
+        "spoiled": "^0.4.0",
         "sweetalert2": "^11.19.1",
         "tailwind-merge": "^3.0.2",
         "tailwindcss-animate": "^1.0.7"
